style.css
/* ... */
.parent-nazaratform-moshakhasat h4 {
	margin-top: 10px;
	padding: 20px;
}
.parent-nazaratform-moshakhasat {
	height: 700px;
	margin-top: 50px;
}

.title-nazarat-moshakhasat {
	text-align: center;
}
.parent-nazarat-moshakhasat {
	margin-top: 60px;
}
.videopart-moshakhasat {
	display: grid;
	grid-template-rows: 100%;
	grid-template-columns: 50% 50%;
	grid-gap: 10px;
	margin-top: 20px;
	width: 100%;
	margin: 25px;
}
.videopart-moshakhasat img {
	width: 70%;
	box-shadow: 2px 2px 10px 2px #b4b2b2;
	border-radius: 10px;
}
.moshakhasat-header-photo-parent {
	width: 100%;
}
.moshakhasat-header-photo-parent figure img {
	width: 100%;
}
.leftbox-moshakhasatdore {
	border-radius: 10px;
	padding: 15px;
	font-weight: bold;
	margin: 20px;
	grid-area: 2 / 1 / span 2 / span 1;
	height: fit-content;
}
.leftbox-moshakhasatdore p {
	padding-top: 20px;
}
.namedars-moshakhasat {
	display: flex;
	flex-direction: column;
}
.btn-moshakhasat-sabadekharid {
	border: solid;
	background-color: var(--bg-btn);
	margin-top: 10px;
	width: 50%;
	border-radius: 5px;
	height: 40px;
}
.btn-moshakhasat-sabadekharid a {
	color: white;
}
.img-parent-master-moshakhasat {
	width: 100%;
	display: flex;
	flex-direction: row;
	margin-top: 10px;
	border: solid;
}
.img-parent-master-moshakhasat figure {
	border: solid;
	width: 30%;
}
.article-moshakhasat {
	margin-top: 20px;
}
.title-article-moshakhasat {
	padding: 20px;
}
.price-moshakhasat-boxleft {
	display: grid;
	grid-template-columns: 50% 50%;
	gap: 30px;
}
.price-moshakhasat-boxleft-style {
	color: red;
}

.img-parent-master-moshakhasat figure img {
	width: 100%;
	border-radius: 100px;
	border: solid;
	display: flex;
	justify-content: center;
}
.parent-article-moshakhasat {
	display: grid;
	padding: 30px;
}
.parent-btn-moshakhasat-sabadekharid {
	display: flex;
	justify-content: center;
}
/* end moshakhasat page */

/*****************************************START ALL PAGES SCORLL STYLE */
.main-scorllsHorinzentalPages {
	overflow-y: hidden;
}
.main-scorllsHorinzentalPages {
	overflow-x: scroll;
	display: flex;
	height: 100vh;
}

.main-scorllsHorinzentalPages::-webkit-scrollbar,
.main-story-page::-webkit-scrollbar {
	width: 100px;
}

.main-scorllsHorinzentalPages::-webkit-scrollbar-track,
.main-story-page::-webkit-scrollbar-track {
	background: rgb(207, 206, 203);
}

.main-scorllsHorinzentalPages::-webkit-scrollbar-thumb,
.main-story-page::-webkit-scrollbar-thumb {
	background-color: var(--cD1A041);
	border-radius: 20px;
	border: 5px solid rgb(207, 206, 203);
}

.main-scorllsHorinzentalPages > section {
	height: 100vh;
	font-size: 4ch;
}

/*********** start menu team ma   */

.parent-btn-text-icon-menu-scorll > div {
	width: 100%;
}

.parent-btn-menu-pagesHS {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.parent-btn-menu-pagesHS > button {
	margin: 5px;
	width: 70%;
}
.parent-btn-menu-pagesHS > p {
	font-weight: bold;
	font-size: 0.8rem;
	padding: 2px;
}

.MenuPagesHS {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	background: rgb(195, 195, 195);
}

.MenuPagesHS img {
	height: 55%;
}

/*********** end  menu team ma   */

/* start section intro  */
.section-intro-ScorllHsPages {
	min-width: 95vw;
}
.section-intro-ScorllHsPages > article {
	height: 100%;
}
.section-intro-ScorllHsPages figure {
	display: flex;

	transform: translate(0px, 10px);
	justify-content: center;
}

.section-intro-ScorllHsPages figure {
	width: 100%;
}

.section-intro-ScorllHsPages img {
	width: 100%;
	height: 100%;
	object-fit: contain;
}

.title-team-ma {
	font-size: 25px;

	text-align: right;

	margin: 45px 20px 15px 0px;
}

.title-team-ma p {
	margin-right: 15px;
}

.section-intro-ScorllHsPages article {
	text-align: right;
}

.section-intro-ScorllHsPages article p {
	font-size: 15px;
	padding-right: 15px;
	margin: 15px;
	margin-left: 51px;
	font-weight: bold;
}

.section-bannerScorllHSpages {
	white-space: nowrap;
	min-width: 11vw;
}
/* end  section intro team ma   */

/* start banner team ma  */
.banner-sc-PageH {
	display: flex;
	justify-content: center;
	flex-direction: column;
	background: rgb(195, 195, 195);
	width: 100%;
	height: 100%;
}

.banner-sc-PageH h6 {
	white-space: nowrap;
	transform: rotate(90deg) translate(0px, 0px);
}

.one-imgSCHPages {
	min-width: 40vw;
}

.two-team-baner {
	white-space: nowrap;
}
/* end  banner team ma  */

/* start section personal imgs  */
.RowsImgsPageScH {
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.RowsImgsPageScH figure {
	display: flex;
}

.RowsImgsPageScH figure img {
	width: 250px;
	height: 226px;
	object-fit: contain;
}

.title-personal-img {
	background-color: gray;
	width: 30%;
}

.title-hamkaran h6 {
	transform: rotate(90deg);
	margin-bottom: 50px;
}

.menu-img-PagesHS {
	margin-bottom: 40px;
}

.wrapper-RowsImgs-PageScH figure {
	display: flex;
	flex-direction: column;
	align-items: center;
	position: relative;
}

.text-figcaptionPagesScH {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
}

.text-figcaptionPagesScH p {
	margin-top: 20px;
	color: white;
}
.text-figcaptionPagesScH {
	width: 100%;
	height: 120%;
}
.story-section.story-sec-three {
	overflow-y: scroll;

	right: 0px;
}
.wrapper-RowsImgs-PageScH figure figcaption {
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	position: absolute;
	font-size: 1rem;
	font-weight: bold;
	background: rgba(53, 52, 52, 0.781);
	width: 149px;
	height: 1px;
	top: 10px;
	color: white;
	opacity: 0;
	visibility: hidden;
	transition: 0.4s;
}

.wrapper-RowsImgs-PageScH figure:hover figcaption {
	opacity: 1;
	visibility: visible;
	height: 203px;
}

.text-figcaptionPagesScH p {
	padding: 5px;
}

.wrapper-RowsImgs-PageScH {
	display: flex;
}

/* end  section personal imgs  */

/* start one img leader   */

.one-imgSCHPages figure img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}
/* ... */

